# yvdbot

./: .gitignore  Procfile  README.md  bot_init.py  pyproject.toml  railway.app.py  start.py
handlers/: admin.py  client.py
keyboards/: __init__.py  admin_kb.py  client_kb.py
modules/: __init__.py  database.py  downloader.py  fsworker.py
